updated links to custom cypress commands

--- a/content/real-world-examples/authentication/login-errors.mdx
+++ b/content/real-world-examples/authentication/login-errors.mdx
@@ -23,7 +23,7 @@ it("should display login errors", function () {
 })
 ```
 
-You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used in this test [here](/real-world-examples/custom-cypress-commands).
 
 An unwritten assertion of this test is to ensure that the application redirects to the Sign In page if not logged in.
 
