--- a/content/real-world-examples/new-transactions/new-transaction-overview-and-setup.mdx
+++ b/content/real-world-examples/new-transactions/new-transaction-overview-and-setup.mdx
@@ -34,7 +34,7 @@ describe("New Transaction", function () {
   });
 ```
 
-You can find out more information about the custom Cypress commands used [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used [here](/real-world-examples/custom-cypress-commands).
 
 The first thing we are doing is seeding our database using a custom Cypress task.
 
