--- a/content/real-world-examples/new-transactions/searching-by-attributes.mdx
+++ b/content/real-world-examples/new-transactions/searching-by-attributes.mdx
@@ -48,7 +48,7 @@ context("searches for a user by attribute", function () {
 
 ```
 
-You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used in this test [here](/real-world-examples/custom-cypress-commands).
 
 First, we create a `searchAttrs` array that contains all of the user attributes we intend to search for.
 
