--- a/content/real-world-examples/new-transactions/submitting-a-payment-to-another-user.mdx
+++ b/content/real-world-examples/new-transactions/submitting-a-payment-to-another-user.mdx
@@ -58,7 +58,7 @@ it("navigates to the new transaction form, selects a user and submits a transact
   });
 ```
 
-You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used in this test [here](/real-world-examples/custom-cypress-commands).
 
 First, we create a simple `payment` object.
 
