--- a/content/real-world-examples/notifications/notifications-between-several-users.mdx
+++ b/content/real-world-examples/notifications/notifications-between-several-users.mdx
@@ -45,7 +45,7 @@ it("User C comments on a transaction between User A and User B; User A and B get
 })
 ```
 
-You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used in this test [here](/real-world-examples/custom-cypress-commands).
 
 First, we log in as `userC` from the `ctx` object, which we set up in the `beforeEach()` hook at the top of this spec file.
 
