--- a/content/real-world-examples/notifications/notifications-overview-and-setup.mdx
+++ b/content/real-world-examples/notifications/notifications-overview-and-setup.mdx
@@ -26,7 +26,7 @@ const ctx = {} as NotificationsCtx;
 
 ```
 
-You can find out more information about the custom Cypress commands used [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used [here](/real-world-examples/custom-cypress-commands).
 
 First, we are using a custom Cypress task to seed our database.
 
