--- a/content/real-world-examples/overview/cypress-real-world-app-overview.mdx
+++ b/content/real-world-examples/overview/cypress-real-world-app-overview.mdx
@@ -16,7 +16,7 @@ It might be best to first fork a copy of the repo and then clone the forked vers
 
 Note: The Cypress Real World App uses [Yarn](https://yarnpkg.com/) to manage its dependencies. Please install [Yarn](https://yarnpkg.com/) on your computer as installing with npm may lead to issues running the application.
 
-Once cloned, change into the `cypress-realworld-app` directory and install all of the npm dependencies using Yarn.
+Once cloned, change into the **cypress-realworld-app** directory and install all of the npm dependencies using Yarn.
 
 ```bash
 yarn install
@@ -28,11 +28,11 @@ You can then run the application with
 yarn dev
 ```
 
-Once the application is up and running, a browser window should open a new tab to `[localhost:3000](http://localhost:3000)`, where you should see the Sign In page.
+Once the application is up and running, a browser window should open a new tab to **http://localhost:3000**, where you should see the Sign In page.
 
 ![](/images/real-world-examples/overview/cypress-real-world-app-overview/Screen_Shot_2021-06-28_at_11.32.22_AM.png)
 
-Refer to the `[README.md](http://readme.md)` file in the repo for additional information and instructions.
+Refer to the **README.md** file in the repo for additional information and instructions.
 
 We provide a set of default users in the database, or you can create your own account. We recommend you first log in with one of the default users to see some of the sample data seeded in the app.
 
@@ -42,7 +42,7 @@ You can list out all of the default users with this command.
 yarn list:dev:users
 ```
 
-Every user's password is `s3cret`.
+Every user's password is **s3cret**.
 
 For example, you can use the following username and password to log in.
 
