--- a/content/real-world-examples/transaction-feeds/app-layout-and-responsiveness.mdx
+++ b/content/real-world-examples/transaction-feeds/app-layout-and-responsiveness.mdx
@@ -31,7 +31,7 @@ describe("app layout and responsiveness", function () {
 })
 ```
 
-You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used in this test [here](/real-world-examples/custom-cypress-commands).
 
 This test is relatively straightforward, and we will not be covering every single line. The general purpose of this test is to make sure that certain elements are either visible or invisible depending upon whether we are in a mobile viewport or not.
 We also use several `cy.visualSnapshot()` to confirm that our UI has not changed. Tests like these are essential as they demonstrate the importance of testing what is there and what should not be there.
