--- a/content/real-world-examples/transaction-feeds/renders-transactions-item-variations-in-feed.mdx
+++ b/content/real-world-examples/transaction-feeds/renders-transactions-item-variations-in-feed.mdx
@@ -135,7 +135,7 @@ describe("renders and paginates all transaction feeds", function () {
 
 ```
 
-You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used in this test [here](/real-world-examples/custom-cypress-commands).
 
 First, we are using `cy.intercept()` to intercept any `GET` request to the `/transactions/public*` route.
 
