--- a/content/real-world-examples/transaction-view/does-not-display-accept-reject-buttons-on-completed-request.mdx
+++ b/content/real-world-examples/transaction-view/does-not-display-accept-reject-buttons-on-completed-request.mdx
@@ -23,7 +23,7 @@ it("does not display accept/reject buttons on completed request", function () {
 
 ```
 
-You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used in this test [here](/real-world-examples/custom-cypress-commands).
 
 The first thing we do is retrieve a "complete" transaction from the database associated with our `authenticatedUser`, which we set up in the `beforeEach()` hook at the top of this spec file. This test is another example of a "Data-Driven Test." Rather than hard-coding this information, we are using real data from our database to drive our test.
 
