--- a/content/real-world-examples/transaction-view/rejects-a-transaction-request.mdx
+++ b/content/real-world-examples/transaction-view/rejects-a-transaction-request.mdx
@@ -16,7 +16,7 @@ it("rejects a transaction request", function () {
 
 ```
 
-You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used in this test [here](/real-world-examples/custom-cypress-commands).
 
 First, we visit the transaction screen for the specific transaction we looked up within the `beforeEach()` hook at the top of the spec file. Then we wait upon the `@getTransaction` intercept.
 
