--- a/content/real-world-examples/transaction-view/transaction-view-overview-and-setup.mdx
+++ b/content/real-world-examples/transaction-view/transaction-view-overview-and-setup.mdx
@@ -41,7 +41,7 @@ beforeEach(function () {
 })
 ```
 
-You can find out more information about the custom Cypress commands used [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used [here](/real-world-examples/custom-cypress-commands).
 
 The `ctx` object is an empty object that we will later populate within the `beforeEach()` with some user data used through the tests in this file.
 
