--- a/content/real-world-examples/transaction-view/transactions-navigation-tabs-are-hidden-on-a-transaction-view-page.mdx
+++ b/content/real-world-examples/transaction-view/transactions-navigation-tabs-are-hidden-on-a-transaction-view-page.mdx
@@ -12,7 +12,7 @@ it("transactions navigation tabs are hidden on a transaction view page", functio
 })
 ```
 
-You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used in this test [here](/real-world-examples/custom-cypress-commands).
 
 This is a relatively straightforward test in which we are making sure that the transaction navigation tabs are hidden on the transaction view page.
 
