--- a/content/real-world-examples/user-settings/updating-user-settings.mdx
+++ b/content/real-world-examples/user-settings/updating-user-settings.mdx
@@ -23,7 +23,7 @@ it("updates first name, last name, email and phone number", function () {
 })
 ```
 
-You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used in this test [here](/real-world-examples/custom-cypress-commands).
 
 First, we need to grab all of the input fields and fill them with the data we want to update.
 
