--- a/content/real-world-examples/authentication/authentication-overview-and-setup.mdx
+++ b/content/real-world-examples/authentication/authentication-overview-and-setup.mdx
@@ -1,13 +1,6 @@
 # Authentication Overview & Setup
 
-Ready for Review: Yes
-Reviewed By: Kevin
-Reviewed By Kevin: September 28, 2021
-Section: Auth, Real World Examples
-Status: Migrated
-Title Approved: Yes
-
-In this section, we will be discussing the various tests located within the `cypress/tests/ui/auth.spec.ts` file.
+In this section, we will be discussing the various tests located within the **cypress/tests/ui/auth.spec.ts** file.
 
 Let's break down what is happening within the `beforeEach()` as it is important to understand what is going on since this hook is running before each test.
 
@@ -31,7 +24,7 @@ beforeEach(function () {
 })
 ```
 
-You can find out more information about the custom Cypress commands used [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used [here](/real-world-examples/custom-cypress-commands).
 
 The first thing that happens inside of this hook is a custom task we have created called `db:seed` which is responsible for seeding our database.
 
