--- a/content/real-world-examples/authentication/invalid-users.mdx
+++ b/content/real-world-examples/authentication/invalid-users.mdx
@@ -15,7 +15,7 @@ it("should error for an invalid user", function () {
 })
 ```
 
-You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used in this test [here](/real-world-examples/custom-cypress-commands).
 
 First, we are using `cy.login()`, a Custom Cypress Command to use the Sign In UI to log in as a user with an invalid username and password.
 
