--- a/content/real-world-examples/bank-accounts/users-without-bank-accounts.mdx
+++ b/content/real-world-examples/bank-accounts/users-without-bank-accounts.mdx
@@ -30,7 +30,7 @@ it("renders an empty bank account list state with onboarding modal", function ()
 })
 ```
 
-You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used in this test [here](/real-world-examples/custom-cypress-commands).
 
 First, we wait upon our aliased intercept `@getNotifications`
 
