--- a/content/real-world-examples/new-transactions/verifying-the-deposit-of-a-payment.mdx
+++ b/content/real-world-examples/new-transactions/verifying-the-deposit-of-a-payment.mdx
@@ -57,7 +57,7 @@ it("submits a transaction payment and verifies the deposit for the receiver", fu
 });
 ```
 
-You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used in this test [here](/real-world-examples/custom-cypress-commands).
 
 First, we click on the "New" transaction button.
 
