--- a/content/real-world-examples/transaction-feeds/filters-transaction-feeds-by-date-range.mdx
+++ b/content/real-world-examples/transaction-feeds/filters-transaction-feeds-by-date-range.mdx
@@ -91,7 +91,7 @@ describe("filters transaction feeds by date range", function () {
 })
 ```
 
-You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used in this test [here](/real-world-examples/custom-cypress-commands).
 
 First, we are checking to see if our test is being run inside of a mobile viewport. If so, we ensure that the data range picker works properly on a mobile device by clicking on it to open it, confirming that it is open, and then closing it.
 
