--- a/content/real-world-examples/transaction-view/comments-on-a-transaction.mdx
+++ b/content/real-world-examples/transaction-view/comments-on-a-transaction.mdx
@@ -21,7 +21,7 @@ it("comments on a transaction", function () {
 })
 ```
 
-You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used in this test [here](/real-world-examples/custom-cypress-commands).
 
 First, we click on the first transaction and wait upon the `@getTransaction` intercept.
 
