--- a/content/real-world-examples/user-settings/user-setting-form-errors.mdx
+++ b/content/real-world-examples/user-settings/user-setting-form-errors.mdx
@@ -42,7 +42,7 @@ it("should display user setting form errors", function () {
 })
 ```
 
-You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used in this test [here](/real-world-examples/custom-cypress-commands).
 
 ## First & Last Name Inputs
 
