--- a/content/real-world-examples/user-settings/user-settings-overview-and-setup.mdx
+++ b/content/real-world-examples/user-settings/user-settings-overview-and-setup.mdx
@@ -27,7 +27,7 @@ beforeEach(function () {
 })
 ```
 
-You can find out more information about the custom Cypress commands used [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out more information about the custom Cypress commands used [here](/real-world-examples/custom-cypress-commands).
 
 The first thing we are doing is seeding our database using a custom Cypress task.
 
@@ -49,7 +49,7 @@ cy.intercept("GET", "/notifications*").as("getNotifications")
 
 We then use a custom Cypress command `cy.database()` to query our database for our users. Then we use another custom Cypress command `cy.loginByXstate()` to login into the application using one of the users returned from `cy.database()`.
 
-You can find out how these custom Commands work in greater detail [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+You can find out how these custom Commands work in greater detail [here](/real-world-examples/custom-cypress-commands).
 
 ```js
 cy.database("find", "users").then((user: User) => {
@@ -57,7 +57,7 @@ cy.database("find", "users").then((user: User) => {
 })
 ```
 
-Finally, we click the button to open the user settings window. We have a special utility function to determine if we are simulating a mobile device or not. You can find out how the `isMobile()` function works in greater detail [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
+Finally, we click the button to open the user settings window. We have a special utility function to determine if we are simulating a mobile device or not. You can find out how the `isMobile()` function works in greater detail [here](/real-world-examples/custom-cypress-commands).
 
 ```js
 if (isMobile()) {
