--- a/content/real-world-examples/authentication/sign-up-login-create-bank-account-and-logout.mdx
+++ b/content/real-world-examples/authentication/sign-up-login-create-bank-account-and-logout.mdx
@@ -1,6 +1,6 @@
 # Sign-up, Login, Create Bank Account and Logout
 
-Before continuing, make sure you have read the [Authentication Overview & Setup](Authentication%20Overview%20&%20Setup%203f4e2a27b6434a27bdadcd217d85397b.md) lesson first.
+Before continuing, make sure you have read the [Authentication Overview & Setup](/real-world-examples/authentication-overview-and-setup) lesson first.
 
 ```js
 it("should allow a visitor to sign-up, login, and logout", function () {
