--- a/content/real-world-examples/authentication/invalid-users.mdx
+++ b/content/real-world-examples/authentication/invalid-users.mdx
@@ -1,6 +1,6 @@
 # Invalid Users
 
-Before continuing, make sure you have read the [Authentication Overview & Setup](Authentication%20Overview%20&%20Setup%203f4e2a27b6434a27bdadcd217d85397b.md) lesson first.
+Before continuing, make sure you have read the [Authentication Overview & Setup](/real-world-examples/authentication-overview-and-setup) lesson first.
 
 ```js
 it("should error for an invalid user", function () {
