updated links and formatting for all user settings examples

--- a/content/real-world-examples/user-settings/user-setting-form-errors.mdx
+++ b/content/real-world-examples/user-settings/user-setting-form-errors.mdx
@@ -1,12 +1,6 @@
 # User Setting Form Errors
 
-Diataxis Type: How-To Guide
-Ready for Review: Yes
-Section: Real World Examples, User Settings
-Status: Migrated
-Title Approved: No
-
-Before continuing, make sure you have read the [User Settings Overview & Setup](User%20Settings%20Overview%20&%20Setup%206d2553f98d2040abbcf6062055aa012c.md) lesson first.
+Before continuing, make sure you have read the [User Settings Overview & Setup](/real-world-examples/user-settings-overview-and-setup) lesson first.
 
 ```js
 it("should display user setting form errors", function () {
@@ -46,7 +40,7 @@ You can find out more information about the custom Cypress commands used in this
 
 ## First & Last Name Inputs
 
-First, we are looping through an array of two strings to find the firstName and lastName inputs. Remember, [Cypress is just JavaScript](Cypress%20is%20Just%20JavaScript%20bc735379ff5146d7918c6927e735b5d8.md), so we can use `Array.forEach()` to simplify our code and remove duplication.
+First, we are looping through an array of two strings to find the firstName and lastName inputs. Remember, [Cypress is just JavaScript](http://localhost:3000/cypress-fundamentals/cypress-is-just-javascript), so we can use `Array.forEach()` to simplify our code and remove duplication.
 
 ```js
 ;["first", "last"].forEach((field) => {
