--- a/content/real-world-examples/user-settings/updating-user-settings.mdx
+++ b/content/real-world-examples/user-settings/updating-user-settings.mdx
@@ -1,6 +1,6 @@
 # Updating User Settings
 
-Before continuing, make sure you have read the [User Settings Overview & Setup](User%20Settings%20Overview%20&%20Setup%206d2553f98d2040abbcf6062055aa012c.md) lesson first.
+Before continuing, make sure you have read the [User Settings Overview & Setup](/real-world-examples/user-settings-overview-and-setup) lesson first.
 
 ```js
 it("updates first name, last name, email and phone number", function () {
