--- a/content/real-world-examples/user-settings/user-settings-overview-and-setup.mdx
+++ b/content/real-world-examples/user-settings/user-settings-overview-and-setup.mdx
@@ -2,7 +2,7 @@
 
 ![](/images/real-world-examples/user-settings/user-settings-overview-and-setup/Screen_Shot_2021-06-29_at_9.51.44_AM.png)
 
-In this section, we will be discussing the various tests located within the `cypress/tests/ui/user-settings.spec.ts` file.
+In this section, we will be discussing the various tests located within the **cypress/tests/ui/user-settings.spec.ts** file.
 
 Let's breakdown what is happening within the `beforeEach()` as it is important to understand what is going on since this hook is running before each test.
 
@@ -35,13 +35,13 @@ The first thing we are doing is seeding our database using a custom Cypress task
 cy.task("db:seed")
 ```
 
-Next, we are using `cy.intercept()` to intercept every `PATCH` request to the `/users/*` route. We are then aliasing this intercept to "updateUser." When you see `@updateUser` being used within a test, it is referring to this intercept.
+Next, we are using `cy.intercept()` to intercept every **PATCH** request to the **/users/\*** route. We are then aliasing this intercept to "updateUser." When you see `@updateUser` being used within a test, it is referring to this intercept.
 
 ```js
 cy.intercept("PATCH", "/users/*").as("updateUser")
 ```
 
-We are also intercepting any `GET` request to the `/notifications` route and aliasing the intercept to "getNotifications." When you see `@getNotifications` being used within a test, it is referring to this intercept.
+We are also intercepting any **GET** request to the **/notifications** route and aliasing the intercept to "getNotifications." When you see `@getNotifications` being used within a test, it is referring to this intercept.
 
 ```js
 cy.intercept("GET", "/notifications*").as("getNotifications")
