updated links and formatting for all new transactions examples

--- a/content/real-world-examples/new-transactions/new-transaction-overview-and-setup.mdx
+++ b/content/real-world-examples/new-transactions/new-transaction-overview-and-setup.mdx
@@ -1,6 +1,6 @@
 # New Transaction Overview & Setup
 
-In this section, we will be discussing the various tests located within the `cypress/tests/ui/new-transaction.spec.ts` file.
+In this section, we will be discussing the various tests located within the **cypress/tests/ui/new-transaction.spec.ts** file.
 
 Let's breakdown what is happening within the `beforeEach()` as it is important to understand what is going on since this hook is running before each test.
 
