--- a/content/real-world-examples/new-transactions/verifying-the-deposit-of-a-payment.mdx
+++ b/content/real-world-examples/new-transactions/verifying-the-deposit-of-a-payment.mdx
@@ -1,6 +1,6 @@
 # Verifying the deposit of a payment
 
-Before continuing, make sure you have read the [New Transaction Overview & Setup](New%20Transaction%20Overview%20&%20Setup%207b6d9e5eb7bd4fc6b712c17a0e1e892b.md) lesson first.
+Before continuing, make sure you have read the [New Transaction Overview & Setup](/real-world-examples/new-transaction-overview-and-setup) lesson first.
 
 ```js
 it("submits a transaction payment and verifies the deposit for the receiver", function () {
