--- a/content/real-world-examples/new-transactions/submitting-a-payment-to-another-user.mdx
+++ b/content/real-world-examples/new-transactions/submitting-a-payment-to-another-user.mdx
@@ -1,6 +1,6 @@
 # Submitting a payment to another user
 
-Before continuing, make sure you have read the [New Transaction Overview & Setup](New%20Transaction%20Overview%20&%20Setup%207b6d9e5eb7bd4fc6b712c17a0e1e892b.md) lesson first.
+Before continuing, make sure you have read the [New Transaction Overview & Setup](/real-world-examples/new-transaction-overview-and-setup) lesson first.
 
 ```js
 it("navigates to the new transaction form, selects a user and submits a transaction payment", function () {
@@ -181,7 +181,7 @@ cy.database("find", "users", { id: ctx.contact!.id })
 
 ![](/images/real-world-examples/new-transactions/submitting-a-payment-to-another-user/Screen_Shot_2021-09-14_at_4.18.23_PM.png)
 
-Finally, we assert that the alert bar does not exist in the `DOM`.
+Finally, we assert that the alert bar does not exist in the DOM.
 
 ```js
 cy.getBySel("alert-bar-success").should("not.exist")
