--- a/content/real-world-examples/transaction-feeds/app-layout-and-responsiveness.mdx
+++ b/content/real-world-examples/transaction-feeds/app-layout-and-responsiveness.mdx
@@ -1,6 +1,6 @@
 # app layout and responsiveness
 
-Before continuing, make sure you have read the [Transaction Feeds Overview & Setup](Transaction%20Feeds%20Overview%20&%20Setup%20375cb80b08844b928872ac8780b9718c.md) lesson first.
+Before continuing, make sure you have read the [Transaction Feeds Overview & Setup](/real-world-examples/transaction-feeds-overview-and-setup) lesson first.
 
 ```js
 describe("app layout and responsiveness", function () {
