--- a/content/real-world-examples/transaction-view/transactions-navigation-tabs-are-hidden-on-a-transaction-view-page.mdx
+++ b/content/real-world-examples/transaction-view/transactions-navigation-tabs-are-hidden-on-a-transaction-view-page.mdx
@@ -25,7 +25,7 @@ cy.location("pathname").should("include", "/transaction")
 
 ![](/images/real-world-examples/transaction-view/transactions-navigation-tabs-are-hidden-on-a-transaction-view-page/Screen_Shot_2021-09-16_at_9.26.18_AM.png)
 
-Finally, we confirm that the transaction tabs are not in the `DOM` and that the transaction header is visible.
+Finally, we confirm that the transaction tabs are not in the DOM and that the transaction header is visible.
 
 ```js
 cy.getBySel("nav-transaction-tabs").should("not.exist")
