--- a/content/real-world-examples/transaction-feeds/filters-transaction-feeds-by-date-range.mdx
+++ b/content/real-world-examples/transaction-feeds/filters-transaction-feeds-by-date-range.mdx
@@ -1,6 +1,6 @@
 # filters transaction feeds by date range
 
-Before continuing, make sure you have read the [Transaction Feeds Overview & Setup](Transaction%20Feeds%20Overview%20&%20Setup%20375cb80b08844b928872ac8780b9718c.md) lesson first.
+Before continuing, make sure you have read the [Transaction Feeds Overview & Setup](/real-world-examples/transaction-feeds-overview-and-setup) lesson first.
 
 ```js
 describe("filters transaction feeds by date range", function () {
@@ -193,7 +193,7 @@ cy.getBySelLike("transaction-item").should("have.length", transactions.length)
 
 Then we loop through all of the transactions and make sure that all of the transaction dates are within the correct range.
 
-- `startOfDayUTC` is a utility function that can be found in `src/utils/transactionUtils.ts`
+- `startOfDayUTC` is a utility function that can be found in **src/utils/transactionUtils.ts**
 - `isWithinInterval` is a function from the [date-fns](https://date-fns.org/) library.
 
 ```js
