--- a/content/real-world-examples/notifications/notifications-overview-and-setup.mdx
+++ b/content/real-world-examples/notifications/notifications-overview-and-setup.mdx
@@ -1,6 +1,6 @@
 # Notifications Overview & Setup
 
-In this section, we will be discussing the various tests located within the `cypress/tests/ui/notifications.spec.ts` file.
+In this section, we will be discussing the various tests located within the **cypress/tests/ui/notifications.spec.ts** file.
 
 Let's break down what is happening within the `beforeEach()` as it is essential to understand what is going on since this hook is running before each test.
 
