updated links and formatting for all transaction view examples

--- a/content/real-world-examples/transaction-view/does-not-display-accept-reject-buttons-on-completed-request.mdx
+++ b/content/real-world-examples/transaction-view/does-not-display-accept-reject-buttons-on-completed-request.mdx
@@ -1,6 +1,6 @@
 # does not display accept reject buttons on completed request
 
-Before continuing, make sure you have read the [Transaction View Overview & Setup](Transaction%20View%20Overview%20&%20Setup%20de652b8e362149babd9b8a5a787d996e.md) lesson first.
+Before continuing, make sure you have read the [Transaction View Overview & Setup](/real-world-examples/transaction-view-overview-and-setup) lesson first.
 
 ```js
 it("does not display accept/reject buttons on completed request", function () {
