--- a/content/real-world-examples/transaction-view/rejects-a-transaction-request.mdx
+++ b/content/real-world-examples/transaction-view/rejects-a-transaction-request.mdx
@@ -1,6 +1,6 @@
 # rejects a transaction request
 
-Before continuing, make sure you have read the [Transaction View Overview & Setup](Transaction%20View%20Overview%20&%20Setup%20de652b8e362149babd9b8a5a787d996e.md) lesson first.
+Before continuing, make sure you have read the [Transaction View Overview & Setup](/real-world-examples/transaction-view-overview-and-setup) lesson first.
 
 ```js
 it("rejects a transaction request", function () {
@@ -26,7 +26,7 @@ cy.visit(`/transaction/${ctx.transactionRequest!.id}`);
 
 ```
 
-Next, we click on the "Reject Request" button and wait on the `@updateTransaction` intercept and confirm that this intercepts status code is `204`.
+Next, we click on the "Reject Request" button and wait on the `@updateTransaction` intercept and confirm that this intercepts status code is **204**.
 
 ```js
 cy.getBySelLike("reject-request").click()
