--- a/content/real-world-examples/transaction-view/comments-on-a-transaction.mdx
+++ b/content/real-world-examples/transaction-view/comments-on-a-transaction.mdx
@@ -1,6 +1,6 @@
 # comments on a transaction
 
-Before continuing, make sure you have read the [Transaction View Overview & Setup](Transaction%20View%20Overview%20&%20Setup%20de652b8e362149babd9b8a5a787d996e.md) lesson first.
+Before continuing, make sure you have read the [Transaction View Overview & Setup](/real-world-examples/transaction-view-overview-and-setup) lesson first.
 
 ```js
 it("comments on a transaction", function () {
