--- a/content/real-world-examples/transaction-view/transactions-navigation-tabs-are-hidden-on-a-transaction-view-page.mdx
+++ b/content/real-world-examples/transaction-view/transactions-navigation-tabs-are-hidden-on-a-transaction-view-page.mdx
@@ -1,6 +1,6 @@
 # transactions navigation tabs are hidden on a transaction view page
 
-Before continuing, make sure you have read the [Transaction View Overview & Setup](Transaction%20View%20Overview%20&%20Setup%20de652b8e362149babd9b8a5a787d996e.md) lesson first.
+Before continuing, make sure you have read the [Transaction View Overview & Setup](/real-world-examples/transaction-view-overview-and-setup) lesson first.
 
 ```js
 it("transactions navigation tabs are hidden on a transaction view page", function () {
